Break out recipe styles

--- a/index.html
+++ b/index.html
@@ -5,11 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1, user-scalable=no, viewport-fit=cover">
     <!-- theme-color below refers to the top notification bar on mobile-->
     <!-- <meta name="theme-color" content="#000000"> -->
-
-    <!-- <link rel="stylesheet" href="assets/style/index.css"> -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap">
     <!-- <link rel="icon" href="assets/images/cb-favicon-32x32.png" type="image/png"> -->
-    <title>Recipes</title>
+    <title>Recept</title>
 </head>
 <style>
     /* Global Styles */
