--- a/choco.html
+++ b/choco.html
@@ -3,64 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="assets/style/recipe.css">
     <title>Spaghetti Bolognese Recipe</title>
-    <style>
-        /* Global Styles */
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f5f5f5;
-            color: #333;
-            margin: 0;
-            padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            min-height: 100vh;
-        }
-
-        .recipe-container {
-            max-width: 600px;
-            width: 100%;
-            background-color: #ffffff;
-            padding: 20px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-            border-radius: 8px;
-            text-align: center;
-        }
-
-        h1 {
-            font-size: 2em;
-            margin: 0 0 20px;
-            color: #444;
-        }
-
-        .recipe-image {
-            width: 100%;
-            height: auto;
-            border-radius: 8px;
-            margin-bottom: 20px;
-        }
-
-        .section-title {
-            font-size: 1.5em;
-            color: #444;
-            margin-top: 20px;
-            margin-bottom: 10px;
-        }
-
-        ul {
-            list-style-type: disc;
-            padding-left: 20px;
-            text-align: left;
-        }
-
-        .instructions {
-            text-align: left;
-        }
-    </style>
 </head>
 <body>
-
 <div class="recipe-container">
     <h1>Chocolate chip</h1>
 
@@ -82,6 +28,5 @@
         5. Serve over cooked spaghetti and enjoy!
     </p>
 </div>
-
 </body>
 </html>
