--- a/index.html
+++ b/index.html
@@ -6,7 +6,9 @@
     <!-- theme-color below refers to the top notification bar on mobile-->
     <!-- <meta name="theme-color" content="#000000"> -->
     <link rel="stylesheet" href="assets/style/index.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300&display=swap">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
     <!-- <link rel="icon" href="assets/images/cb-favicon-32x32.png" type="image/png"> -->
     <title>Recept</title>
 </head>
